Fix parsing of storageUsed

For some reason, it was implemented as multi-valued property

https://bugzilla.gnome.org/show_bug.cgi?id=770174